--- a/charts/service-tracker-ui/values.yaml
+++ b/charts/service-tracker-ui/values.yaml
@@ -6,6 +6,6 @@ service:
 
 deploy:
   name: service-tracker-ui
-  acrServer: "youracr.azurecr.io"
+  acrServer: "fernando31300.eastus.cloudapp.azure.com"
   imageTag: "1.0"
   containerPort: 8080
